# django-boosted

./: LICENSE  README.md  dev.py  pyproject.toml  requirements-dev.txt
.agentia/rules/: development.md  purpose.md  structure.md
.cursor/rules/: assistant-guidelines.md
docs/: AI.md  development.md
src/django_admin_boost/: __init__.py  decorators.py  mixins.py
src/django_admin_boost/admin/: fieldsets.py  format.py  model.py  tools.py  views.py  views_setup.py
src/django_admin_boost/models/: urls.py
src/django_admin_boost/templates/admin_boost/: change_form.html  form_view.html  hello.html
src/django_boosted/: __init__.py  apps.py
src/django_boosted/admin/: __init__.py  format.py  model.py  views.py  views_setup.py
src/django_boosted/admin/views/: adminform.py  base.py  confirm.py  form.py  generator.py  json.py  list.py  message.py  setup.py
src/django_boosted/middleware/: __init__.py  current_user.py
src/django_boosted/models/: __init__.py  fields.py  mixins.py
src/django_boosted/templates/admin_boost/: change_list.html
tests/: __init__.py  settings.py  test_views.py
tests/app/: admin.py  models.py
tests/app/admin/: country.py
