[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-boosted"
version = "0.2.2"
description = "Reusable helpers to register custom Django admin views and object tools."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Hicinformatic", email = "hicinformatic@gmail.com"}
]
keywords = [
  "django",
  "django-admin",
  "admin-views",
  "admin-tools",
  "django-extensions",
  "admin-customization",
  "python",
]
dependencies = [
  "Django>=4.2",
]
classifiers = [
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://github.com/hicinformatic/django-boosted"
Repository = "https://github.com/hicinformatic/django-boosted"
Documentation = "https://github.com/hicinformatic/django-boosted#readme"
Issues = "https://github.com/hicinformatic/django-boosted/issues"

[tool.setuptools]
license-files = ["LICENSE"]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["src", "."]
addopts = "-ra"


